# STM32F407

./: CMakeLists.txt  build.ninja  compile_commands.json  stm32f407_disco_base.ioc
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: main.c  stm32f4xx_it.c  syscalls.c
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_dma_ex.h
User/Tests/inc/: timer_test.h  uart_test.h
User/Tests/src/: timer_test.c  uart_test.c
User/c_inc/: sine_generator.h  uart_driver.h
User/c_inc/hardware_init/: user_dma_init.h  user_gpio_init.h  user_peripheral_init.h  user_timer_init.h
User/c_inc/user_drivers/: timer_driver.h  uart_driver.h
User/c_src/: sine_generator.c  uart_driver.c
User/c_src/hardware_init/: user_dma_init.c  user_gpio_init.c  user_peripheral_init.c  user_timer_init.c
User/c_src/user_drivers/: timer_driver.c  uart_driver.c
cmake/stm32cubemx/: CMakeLists.txt
